# OOP_Laboratory_works

lab2/: CMakeLists.txt  Makefile  README.md  run.cpp
lab2/include/: Twelve.hpp  vector.hpp
lab2/src/: Twelve.cpp  vector.cpp
lab2/tests/: twelve_tests.cpp  vector_tests.cpp
lab3/: CMakeLists.txt  README.md  run.cpp
lab3/include/containers/: FiguresVector.hpp
lab3/include/figures/: Point.hpp  Rectangle.hpp  Square.hpp  Trapeze.hpp
lab3/include/interfaces/: figure.hpp
lab3/src/containers/: FiguresVector.cpp
lab3/src/figures/: Point.cpp  Rectangle.cpp  Square.cpp  Trapeze.cpp
lab3/tests/: point_tests.cpp  rectangle_tests.cpp  square_tests.cpp  trapeze_tests.cpp  vector_tests.cpp
lab4/: CMakeLists.txt  Makefile  README.md  run.cpp
lab4/include/containers/: vector.h
lab4/include/figures/: Point.h  Rectangle.h  Square.h  Trapeze.h
lab4/include/functions/: functions.h
lab4/include/interfaces/: figure.h
lab4/src/containers/: vector.cpp
lab4/src/figures/: Point.cpp  Rectangle.cpp  Square.cpp  Trapeze.cpp
lab4/src/functions/: functions.cpp
lab4/tests/: point_tests.cpp  rectangle_tests.cpp  square_tests.cpp  trapeze_tests.cpp  vector_tests.cpp
lab5/: CMakeLists.txt  README.md  main.cpp  test.cpp
lab5/include/: Allocator.h  Factorial.h  List.h
lab6/: CMakeLists.txt  Makefile  README.md  run.cpp
lab6/game_data/: npc.txt
lab6/include/mobs/: NPC.h  Orc.h  (+2 more)
lab6/logs/: battle_logs.txt
lab6/tests/: game_tests.cpp
lab7/: CMakeLists.txt  README.md  run.cpp
lab7/game_data/: npc.txt
lab7/logs/: battle_logs.txt
lab7/tests/: game_tests.cpp
(+25 files in other folders)
